--- a/src/app/(payload)/custom.scss
+++ b/src/app/(payload)/custom.scss
@@ -1,4 +1,4 @@
-@import '@payloadcms/next/css';
+/* @import '@payloadcms/next/css'; - Moved to layout.tsx */
 
 /* Custom styles for admin panel */
 :root {
